Update file via DeepSync Chrome Extension

--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Radio Scheduler Status</title>
+    <link rel="stylesheet" href="https://unpkg.com/purecss@2.1.0/build/pure-min.css" integrity="sha384-yHIFVG6ClnONEA5yB5DJXfW2/KC173DIQrYoZMEtBvGzmf0PKiGyNEqe9N6BNDBH" crossorigin="anonymous">
     <link rel="stylesheet" href="styles.css">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
     <script>
         function clearLog() {
             fetch('/clearlog', { method: 'GET' })
@@ -14,33 +14,41 @@
     </script>
 </head>
 <body>
-    <div class="container">
-        <header>
-            <h1>Radio Scheduler Status</h1>
-            <p>Welcome to the Radio Scheduler service. Manage your playlists and view logs easily.</p>
-        </header>
+    <div class="container pure-g">
+        <div class="pure-u-1">
+            <header class="header">
+                <h1>Radio Scheduler Status</h1>
+                <p>Welcome to the Radio Scheduler service. Manage your playlists and view logs easily.</p>
+            </header>
+        </div>
 
-        <section class="current-time">
-            <h2>Current Date and Time</h2>
-            <ul>
-                <li><strong>Gregorian:</strong> {{GregorianDate}}</li>
-                <li><strong>Persian:</strong> {{PersianDate}}</li>
-                <li><strong>Hijri:</strong> {{HijriDate}}</li>
-            </ul>
-        </section>
+        <div class="pure-u-1 pure-u-md-1-2">
+            <section class="current-time">
+                <h2>Current Date and Time</h2>
+                <ul class="pure-menu-list">
+                    <li class="pure-menu-item"><strong>Gregorian:</strong> {{GregorianDate}}</li>
+                    <li class="pure-menu-item"><strong>Persian:</strong> {{PersianDate}}</li>
+                    <li class="pure-menu-item"><strong>Hijri:</strong> {{HijriDate}}</li>
+                </ul>
+            </section>
+        </div>
 
-        <section class="playlist-status">
-            <h2>Playlist Status</h2>
-            <ul id="playlist-items">
-                {{PlaylistItems}}
-            </ul>
-        </section>
+        <div class="pure-u-1 pure-u-md-1-2">
+            <section class="playlist-status">
+                <h2>Playlist Status</h2>
+                <ul class="pure-menu-list" id="playlist-items">
+                    {{PlaylistItems}}
+                </ul>
+            </section>
+        </div>
 
-        <section class="log-management">
-            <h2>Log Management</h2>
-            <button onclick="clearLog()" class="btn-clear-log">Clear Log</button>
-            <a href="/viewlog" class="btn-view-log">View Log File</a>
-        </section>
+        <div class="pure-u-1">
+            <section class="log-management">
+                <h2>Log Management</h2>
+                <button onclick="clearLog()" class="pure-button pure-button-primary">Clear Log</button>
+                <a href="/viewlog" class="pure-button pure-button-secondary">View Log File</a>
+            </section>
+        </div>
     </div>
 </body>
 </html>
