--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -1,54 +1,55 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fa">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Radio Scheduler Status</title>
-    <link rel="stylesheet" href="https://unpkg.com/purecss@2.1.0/build/pure-min.css" integrity="sha384-yHIFVG6ClnONEA5yB5DJXfW2/KC173DIQrYoZMEtBvGzmf0PKiGyNEqe9N6BNDBH" crossorigin="anonymous">
+    <title>وضعیت زمان‌بندی رادیو</title>
     <link rel="stylesheet" href="styles.css">
-    <script>
-        function clearLog() {
-            fetch('/clearlog', { method: 'GET' })
-                .then(response => window.location.reload());
-        }
-    </script>
 </head>
 <body>
-    <div class="container pure-g">
-        <div class="pure-u-1">
-            <header class="header">
-                <h1>Radio Scheduler Status</h1>
-                <p>Welcome to the Radio Scheduler service. Manage your playlists and view logs easily.</p>
-            </header>
-        </div>
+    <div class="container">
+        <h1>وضعیت زمان‌بندی رادیو</h1>
 
-        <div class="pure-u-1 pure-u-md-1-2">
-            <section class="current-time">
-                <h2>Current Date and Time</h2>
-                <ul class="pure-menu-list">
-                    <li class="pure-menu-item"><strong>Gregorian:</strong> {{GregorianDate}}</li>
-                    <li class="pure-menu-item"><strong>Persian:</strong> {{PersianDate}}</li>
-                    <li class="pure-menu-item"><strong>Hijri:</strong> {{HijriDate}}</li>
-                </ul>
-            </section>
-        </div>
+        <!-- بخش زمان فعلی -->
+        <section class="current-time">
+            <h2>زمان فعلی</h2>
+            <ul>
+                <li><strong>میلادی:</strong> <span id="gregorian-time"></span></li>
+                <li><strong>شمسی:</strong> <span id="persian-time"></span></li>
+                <li><strong>قمری:</strong> <span id="hijri-time"></span></li>
+            </ul>
+        </section>
 
-        <div class="pure-u-1 pure-u-md-1-2">
-            <section class="playlist-status">
-                <h2>Playlist Status</h2>
-                <ul class="pure-menu-list" id="playlist-items">
-                    {{PlaylistItems}}
-                </ul>
-            </section>
-        </div>
+        <!-- بخش اوقات شرعی -->
+        <section class="prayer-times">
+            <h2>اوقات شرعی امروز</h2>
+            <ul>
+                <li><strong>اذان صبح:</strong> <span id="fajr">{{Fajr}}</span></li>
+                <li><strong>طلوع آفتاب:</strong> <span id="sunrise">{{Sunrise}}</span></li>
+                <li><strong>اذان ظهر:</strong> <span id="dhuhr">{{Dhuhr}}</span></li>
+                <li><strong>اذان عصر:</strong> <span id="asr">{{Asr}}</span></li>
+                <li><strong>غروب آفتاب:</strong> <span id="sunset">{{Sunset}}</span></li>
+                <li><strong>اذان مغرب:</strong> <span id="maghrib">{{Maghrib}}</span></li>
+                <li><strong>اذان عشاء:</strong> <span id="isha">{{Isha}}</span></li>
+            </ul>
+        </section>
 
-        <div class="pure-u-1">
-            <section class="log-management">
-                <h2>Log Management</h2>
-                <button onclick="clearLog()" class="pure-button pure-button-primary">Clear Log</button>
-                <a href="/viewlog" class="pure-button pure-button-secondary">View Log File</a>
-            </section>
-        </div>
+        <!-- بخش وضعیت پخش -->
+        <section class="playlist-status">
+            <h2>وضعیت پخش</h2>
+            <ul id="playlist-items">
+                <!-- آیتم‌های پخش اینجا نمایش داده می‌شوند -->
+            </ul>
+        </section>
+
+        <!-- بخش مدیریت لاگ‌ها -->
+        <section class="log-management">
+            <h2>مدیریت لاگ‌ها</h2>
+            <button onclick="clearLog()">پاک کردن لاگ‌ها</button>
+            <a href="/viewlog" target="_blank">مشاهده لاگ‌ها</a>
+        </section>
     </div>
+
+    <script src="scripts.js"></script>
 </body>
 </html>
