Update file via DeepSync Chrome Extension

--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -20,7 +20,7 @@
                 <ul class="nav">
                     <li><a href="#" onclick="loadPage('home')">Home</a></li>
                     <li><a href="#" onclick="loadPage('viewlog')">View Log</a></li>
-                    <li><a href="#" onclick="loadPage('clearlog')">Clear Log</a></li>
+                    <li><a href="#" onclick="clearLog(); return false;">Clear Log</a></li>
                 </ul>
             </div>
         </div>
