--- a/wwwroot/viewlog.html
+++ b/wwwroot/viewlog.html
@@ -12,7 +12,12 @@
 <script>
     // Fetch log content dynamically from the /api/logs endpoint
     fetch('/api/logs')
-        .then(response => response.text())
+        .then(response => {
+            if (!response.ok) {
+                throw new Error('Failed to fetch log content');
+            }
+            return response.text();
+        })
         .then(data => {
             document.getElementById('log-content').textContent = data;
         })
