Update file via DeepSync Chrome Extension

--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -46,5 +46,11 @@
     <script src="/js/light-bootstrap-dashboard.js"></script>
     <!-- Custom JS -->
     <script src="/js/main.js"></script>
+    <script>
+        // Load the home page by default when the page loads
+        window.onload = function () {
+            loadPage('home');
+        };
+    </script>
 </body>
 </html>
