Update file via DeepSync Chrome Extension

--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -26,19 +26,19 @@
                 </div>
                 <ul class="nav">
                     <li>
-                        <a href="#" onclick="loadPage('home')">
+                        <a href="#" id="home-link">
                             <i class="fas fa-home"></i>
                             <p>Home</p>
                         </a>
                     </li>
                     <li>
-                        <a href="#" onclick="loadPage('viewlog')">
+                        <a href="#" id="viewlog-link">
                             <i class="fas fa-list-alt"></i>
                             <p>View Log</p>
                         </a>
                     </li>
                     <li>
-                        <a href="#" onclick="clearLog(); return false;">
+                        <a href="#" id="clear-log-link">
                             <i class="fas fa-trash"></i>
                             <p>Clear Log</p>
                         </a>
