Update file via DeepSync Chrome Extension

--- a/wwwroot/viewlog.html
+++ b/wwwroot/viewlog.html
@@ -6,6 +6,6 @@
         <h2>View Log</h2>
     </div>
     <div class="card-body">
-        <pre id="log-content">Loading log content...</pre>
+        <pre id="log-content" class="p-3 bg-light rounded">Loading log content...</pre>
     </div>
 </div>
