Update file via DeepSync Chrome Extension

--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -25,20 +25,20 @@
                     </a>
                 </div>
                 <ul class="nav">
-                    <li>
-                        <a href="#" id="home-link">
+                    <li class="nav-item">
+                        <a class="nav-link" href="#" id="home-link">
                             <i class="fas fa-home"></i>
                             <p>Home</p>
                         </a>
                     </li>
-                    <li>
-                        <a href="#" id="viewlog-link">
+                    <li class="nav-item">
+                        <a class="nav-link" href="#" id="viewlog-link">
                             <i class="fas fa-list-alt"></i>
                             <p>View Log</p>
                         </a>
                     </li>
-                    <li>
-                        <a href="#" id="clear-log-link">
+                    <li class="nav-item">
+                        <a class="nav-link" href="#" id="clear-log-link">
                             <i class="fas fa-trash"></i>
                             <p>Clear Log</p>
                         </a>
