Update file via DeepSync Chrome Extension

--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -38,6 +38,12 @@
                         </a>
                     </li>
                     <li class="nav-item">
+                        <a class="nav-link" href="#" id="schedule-list-link" aria-label="Schedule List">
+                            <i class="fas fa-calendar-alt"></i>
+                            <p>Schedule List</p>
+                        </a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link" href="#" id="clear-log-link" aria-label="Clear Log">
                             <i class="fas fa-trash"></i>
                             <p>Clear Log</p>
@@ -70,6 +76,12 @@
                                 <a class="nav-link" href="#" id="viewlog-link" aria-label="View Log">
                                     <i class="fas fa-list-alt"></i>
                                     <p>View Log</p>
+                                </a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#" id="schedule-list-link" aria-label="Schedule List">
+                                    <i class="fas fa-calendar-alt"></i>
+                                    <p>Schedule List</p>
                                 </a>
                             </li>
                             <li class="nav-item">
