Update file via DeepSync Chrome Extension

--- a/wwwroot/schedule-list.html
+++ b/wwwroot/schedule-list.html
@@ -15,7 +15,7 @@
             <table class="table table-striped">
                 <thead>
                     <tr>
-                        <th>Playlist</th>
+                        <th>Name</th> <!-- Display the Name field -->
                         <th>Start Time</th>
                         <th>End Time</th>
                         <th>Trigger Event</th>
