Update file via DeepSync Chrome Extension

--- a/schedule-list.html
+++ b/schedule-list.html
@@ -18,7 +18,9 @@
                         <th>Name</th>
                         <th>Start Time</th>
                         <th>End Time</th>
-                        <th>Trigger Event</th>
+                        <th>Total Duration</th>
+                        <th>Last Play Time</th>
+                        <th>Trigger Time</th>
                         <th>Status</th>
                     </tr>
                 </thead>
