Update file via DeepSync Chrome Extension

--- a/wwwroot/schedule-list.html
+++ b/wwwroot/schedule-list.html
@@ -15,10 +15,12 @@
             <table class="table table-striped">
                 <thead>
                     <tr>
-                        <th>Name</th> <!-- Display the Name field -->
+                        <th>Name</th>
                         <th>Start Time</th>
                         <th>End Time</th>
-                        <th>Trigger Event</th>
+                        <th>Total Duration</th>
+                        <th>Last Play Time</th>
+                        <th>Trigger Time</th>
                         <th>Status</th>
                     </tr>
                 </thead>
